# lexon-bench

./: .gitignore  .zenodo.json  CITATION.cff  Dockerfile  LICENSE  LICENSE-DATA  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: experiment_synthetic.yaml
data/illustrative/: eu_ai_act_mapping.csv  eu_ai_act_mapping.jsonl
data/processed/: benchmark_instances.jsonl  clauses.jsonl  gold_labels.jsonl  system_profiles.jsonl
data/raw/: real_clause_slice_metadata.yaml  synthetic_clause_specs.yaml  system_profile_specs.yaml
data/splits/: dev_ids.txt  test_ids.txt  train_ids.txt
docs/: ai_law_positioning.md  annotation_rubric.md  assumptions.md  conformance_suite.md  data_availability_statement.md  data_availability_statement_anonymous.md  data_availability_statement_public.md  eu_ai_act_illustrative_mapping.md  genai_disclosure_template.md  legal_scope_and_non_advice.md  manuscript_alignment.md  mdpi_data_availability_statement.md  revision_from_information_submission.md  shacl_baseline.md  trace_format.md
outputs/reports/: ailaw_results_block.md  reproducibility_report.md
outputs/results/: metrics_by_difficulty.csv  metrics_synthetic.csv
outputs/tables/: table_ablation.md  table_activation_gap.md
outputs/traces/: trace_applicable_CL-002_SYS-007.json  trace_uncertain_CL-010_SYS-027.json  (+1 more)
paper-txt/: LEXON_AILaw_submission.md  LEXON_Information_MDPI.md  feedback.md
rules/: lexon_core.dl
scripts/: build_anonymous_review_artifact.py  check_blind_submission.py  check_no_placeholders.py  check_springer_manuscript_style.py  check_springer_reference_style.py  generate_trace_examples.py  reproduce_paper_results.py  validate_illustrative_mapping.py
tests/: test_activation_all_conditions.py  test_capability_conditions.py  test_metrics.py  test_no_placeholder_results.py  test_schemas.py
(+56 files in other folders)
