[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lexon-bench"
version = "1.1.0"
description = "LEXON: Executable Obligation Reasoning for AI Regulation — Companion Artifact (Artificial Intelligence and Law)"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Roy Saurabh", email = "roy@affectlog.com" }]
requires-python = ">=3.11"
keywords = [
    "AI regulation",
    "knowledge graphs",
    "Datalog",
    "compliance reasoning",
    "regulatory information systems",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.5,<3",
    "pandas>=2.1,<3",
    "numpy>=1.26,<2",
    "scikit-learn>=1.3,<2",
    "networkx>=3.2,<4",
    "matplotlib>=3.8,<4",
    "typer>=0.9,<1",
    "rich>=13.7,<14",
    "pyyaml>=6.0,<7",
    "jsonlines>=4.0,<5",
]

[project.optional-dependencies]
rdf = ["rdflib>=7.0,<8"]
dev = [
    "pytest>=7.4,<9",
    "pytest-cov>=4.1,<6",
    "ruff>=0.1,<1",
    "mypy>=1.7,<2",
]

[project.scripts]
lexon = "lexon.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/lexon"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "determinism: marks tests that verify seed-based reproducibility",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=5.0.0",
]
